; ModuleID = '/home/carl/AnghaBench/mongoose/examples/settings_panel_for_a_device/extr_settings_panel.c_handle_save.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/settings_panel_for_a_device/extr_settings_panel.c_handle_save.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i8* }
%struct.mg_connection = type { i32 }
%struct.http_message = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i64 }

@.str = private unnamed_addr constant [9 x i8] c"setting1\00", align 1
@s_settings = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str.1 = private unnamed_addr constant [9 x i8] c"setting2\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"setting3\00", align 1
@.str.3 = private unnamed_addr constant [36 x i8] c"Settings updated to '%s' '%s' '%s'\0A\00", align 1
@.str.4 = private unnamed_addr constant [45 x i8] c"HTTP/1.1 200 OK\0D\0AContent-Length: %lu\0D\0A\0D\0A%.*s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_connection*, %struct.http_message*)* @handle_save to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_save(%struct.mg_connection* %0, %struct.http_message* %1) #0 {
  %3 = alloca %struct.mg_connection*, align 8
  %4 = alloca %struct.http_message*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %3, align 8
  store %struct.http_message* %1, %struct.http_message** %4, align 8
  %5 = load %struct.http_message*, %struct.http_message** %4, align 8
  %6 = getelementptr inbounds %struct.http_message, %struct.http_message* %5, i32 0, i32 0
  %7 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @s_settings, i32 0, i32 0), align 8
  %8 = call i32 @mg_get_http_var(%struct.TYPE_4__* %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %7, i32 8)
  %9 = load %struct.http_message*, %struct.http_message** %4, align 8
  %10 = getelementptr inbounds %struct.http_message, %struct.http_message* %9, i32 0, i32 0
  %11 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @s_settings, i32 0, i32 1), align 8
  %12 = call i32 @mg_get_http_var(%struct.TYPE_4__* %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %11, i32 8)
  %13 = load %struct.http_message*, %struct.http_message** %4, align 8
  %14 = getelementptr inbounds %struct.http_message, %struct.http_message* %13, i32 0, i32 0
  %15 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @s_settings, i32 0, i32 2), align 8
  %16 = call i32 @mg_get_http_var(%struct.TYPE_4__* %14, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %15, i32 8)
  %17 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @s_settings, i32 0, i32 0), align 8
  %18 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @s_settings, i32 0, i32 1), align 8
  %19 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @s_settings, i32 0, i32 2), align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.3, i64 0, i64 0), i8* %17, i8* %18, i8* %19)
  %21 = load %struct.mg_connection*, %struct.mg_connection** %3, align 8
  %22 = load %struct.http_message*, %struct.http_message** %4, align 8
  %23 = getelementptr inbounds %struct.http_message, %struct.http_message* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.http_message*, %struct.http_message** %4, align 8
  %27 = getelementptr inbounds %struct.http_message, %struct.http_message* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = trunc i64 %29 to i32
  %31 = load %struct.http_message*, %struct.http_message** %4, align 8
  %32 = getelementptr inbounds %struct.http_message, %struct.http_message* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @mg_printf(%struct.mg_connection* %21, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.4, i64 0, i64 0), i64 %25, i32 %30, i32 %34)
  ret void
}

declare dso_local i32 @mg_get_http_var(%struct.TYPE_4__*, i8*, i8*, i32) #1

declare dso_local i32 @printf(i8*, i8*, i8*, i8*) #1

declare dso_local i32 @mg_printf(%struct.mg_connection*, i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
